# Balmung

./: .gitignore  Advanced_and_emerging_Topic_Modeler.py  LICENSE  README.md  The_critique_of_pure_reason_full.txt  Traditional_Topic_Modeler.py  app.py  docker-compose.yml  dockerfile  generator_LLM.ipynb  generator_RB.ipynb  main.ipynb  makefile  paper_scraper.ipynb  philosophical_investigations.md  playground_net.ipynb  pyproject.toml  sqlite.py
.obsidian/: workspace.json
ER-NLP/: .gitignore  ER-NLP.md  company_name_HuggingFace.csv  company_name_HuggingFace.ipynb  company_name_HuggingFace_GoogleBert.csv  company_name_spaCy_ER-NLP.ipynb  geo_location_spaCy.ipynb  makefile  ner_results.csv  personen.csv  playground_ER-NLP.ipynb  readme.md  spaCy_ER-NLP.ipynb  test.md
Embeddings/: Bert.md  ER_BERT.py
Q_and_A/: requirements.txt
data_output/: chunks.csv  graph.csv
docker/: docker-compose.yml
docs/: index.html
helpers/: .df_helpers.py.swp  df_helpers.py  neo4j_connector.py  paper_scraper.ipynb  prompts.py  test_neo4j_connector.py  test_test.py  text_processor.ipynb  text_processor_experimental.ipynb
ismails_guide_to_fishing/: Advanced_and_emerging_Topic_Modeler.py  Traditional_Topic_Modeler.py  fish_me.md
kants_knowledge_graph/: generator_LLM.ipynb
notes/: Chaos.md  Ismails_Guide_to_fishing  finding_and_handling_meaning.md.md  makefile  models_and_other_mysteries.md  quest_for_knowledge.md  the_unkown.md  what_is_information.md
ollama/: client.py
paper_export/: test.csv
reranking/: Dockerfile  docker-compose.yml
scraper/: wikipedia_scraper.py
(+42 files in other folders)
